1.2
===

* added file selector: just launch program without arguments and select file
* translation fixes

1.1
===

* fixed ecnryption error in case key is not trusted
* added about dialog to editor
* added notification area history items management dialog (edit, reorder, delete)