@@ -2,6 +2,7 @@
 ===
 
 * added file selector: just launch program without arguments and select file
+* added random string generator
 * translation fixes
 
 1.1
